--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -11,13 +11,13 @@ dracula:
     - &FG        '#F8F8F2'
     - &SELECTION '#44475A'
     - &COMMENT   '#6272A4'
-    - &LG_CYAN      '#8BE9FD'
     - &LG_GREEN     '#50FA7B'
     - &LG_ORANGE    '#FFB86C'
     - &LG_PINK      '#FF79C6'
     - &LG_PURPLE    '#BD93F9'
     - &LG_RED       '#FF5555'
     - &LG_YELLOW    '#F1FA8C'
+    - &PURPLE       '#c77ebb'
   ansi:
     - &COLOR0        '#21222C'
     - &COLOR1        '#FF5555'
@@ -133,7 +133,7 @@ colors:
   list.activeSelectionForeground: *FG                                           # List/Tree foreground color for the selected item when the list/tree is active
   list.dropBackground: *SELECTION                                               # List/Tree drag and drop background when moving items around using the mouse
   list.focusBackground: *LineHighlight                                          # List/Tree background color for the focused item when the list/tree is active
-  list.highlightForeground: *LG_CYAN                                               # List/Tree foreground color of the match highlights when searching inside the list/tree
+  list.highlightForeground: *PURPLE                                               # List/Tree foreground color of the match highlights when searching inside the list/tree
   list.hoverBackground: *LineHighlight                                          # List/Tree background when hovering over items using the mouse
   list.inactiveSelectionBackground: *LineHighlight                              # List/Tree background color for the selected item when the list/tree is inactive
   list.inactiveSelectionForeground:                                             # List/Tree foreground color for the selected item when the list/tree is inactive. An active list/tree has keyboard focus, an inactive does not
@@ -191,19 +191,19 @@ colors:
   editor.inactiveSelectionBackground:                                           # Color of the selection in an inactive editor
   editor.foldBackground: !alpha [ *BGDark, 80 ]                                 # Background color for folded ranges
 
-  editor.wordHighlightBackground: !alpha [ *LG_CYAN, 50 ]                          # Background color of a symbol during read-access, for example when reading a variable
+  editor.wordHighlightBackground: !alpha [ *PURPLE, 50 ]                          # Background color of a symbol during read-access, for example when reading a variable
   editor.wordHighlightStrongBackground: !alpha [ *LG_GREEN, 50 ]                   # Background color of a symbol during write-access, for example when writing to a variable
 
   editor.findMatchBackground: !alpha [ *LG_ORANGE, 80 ]
   editor.findMatchHighlightBackground: !alpha [ *WHITE, 40 ]                    # Color of the other search matches
   editor.findRangeHighlightBackground: *LineHighlight                           # Color the range limiting the search
 
-  editor.hoverHighlightBackground: !alpha [*LG_CYAN, 50]                           # Highlight below the word for which a hover is shown
+  editor.hoverHighlightBackground: !alpha [*PURPLE, 50]                           # Highlight below the word for which a hover is shown
 
   editor.lineHighlightBackground:                                               # Background color for the highlight of line at the cursor position
   editor.lineHighlightBorder: *SELECTION                                        # Background color for the border around the line at the cursor position
 
-  editorLink.activeForeground: *LG_CYAN                                            # Color of active links
+  editorLink.activeForeground: *PURPLE                                            # Color of active links
   editor.rangeHighlightBackground: !alpha [ *LG_PURPLE, 15 ]                       # Background color of highlighted ranges, like by Quick Open and Find features
 
   editor.snippetTabstopHighlightBackground: *BG                                 # Highlight background color of a snippet tabstop
@@ -226,7 +226,7 @@ colors:
 
   editorBracketHighlight.foreground1: *FG                                       # Color of first pair of brackets
   editorBracketHighlight.foreground2: *LG_PINK                                     # Color of second pair of brackets
-  editorBracketHighlight.foreground3: *LG_CYAN                                     # Color of third pair of brackets
+  editorBracketHighlight.foreground3: *PURPLE                                     # Color of third pair of brackets
   editorBracketHighlight.foreground4: *LG_GREEN                                    # Color of fourth pair of brackets
   editorBracketHighlight.foreground5: *LG_PURPLE                                   # Color of fifth pair of brackets
   editorBracketHighlight.foreground6: *LG_ORANGE                                   # Color of sixth pair of brackets
@@ -236,27 +236,27 @@ colors:
   editorOverviewRuler.findMatchForeground:
   editorOverviewRuler.rangeHighlightForeground:
   editorOverviewRuler.selectionHighlightForeground: *LG_ORANGE
-  editorOverviewRuler.wordHighlightForeground: *LG_CYAN
+  editorOverviewRuler.wordHighlightForeground: *PURPLE
   editorOverviewRuler.wordHighlightStrongForeground: *LG_GREEN
-  editorOverviewRuler.modifiedForeground: !alpha [ *LG_CYAN, 80 ]
+  editorOverviewRuler.modifiedForeground: !alpha [ *PURPLE, 80 ]
   editorOverviewRuler.addedForeground:    !alpha [ *LG_GREEN,  80 ]
   editorOverviewRuler.deletedForeground:  !alpha [ *LG_RED,    80 ]
   editorOverviewRuler.errorForeground:    !alpha [ *LG_RED,    80 ]
   editorOverviewRuler.warningForeground:  !alpha [ *LG_ORANGE, 80 ]
-  editorOverviewRuler.infoForeground:     !alpha [ *LG_CYAN,   80 ]
+  editorOverviewRuler.infoForeground:     !alpha [ *PURPLE,   80 ]
 
   editorError.foreground: *LG_RED                                                  # Foreground color of error squigglies in the editor
   editorError.border:                                                           # Border color of error squigglies in the editor
-  editorWarning.foreground: *LG_CYAN                                               # Foreground color of warning squigglies in the editor
+  editorWarning.foreground: *PURPLE                                               # Foreground color of warning squigglies in the editor
   editorWarning.border:                                                         # Border color of warning squigglies in the editor
 
   editorGutter.background:                                                      # Background color of the editor gutter
-  editorGutter.modifiedBackground: !alpha [ *LG_CYAN, 80 ]                         # Editor gutter background color for lines that are modified
+  editorGutter.modifiedBackground: !alpha [ *PURPLE, 80 ]                         # Editor gutter background color for lines that are modified
   editorGutter.addedBackground:    !alpha [ *LG_GREEN,  80 ]                       # Editor gutter background color for lines that are added
   editorGutter.deletedBackground:  !alpha [ *LG_RED,    80 ]                       # Editor gutter background color for lines that are deleted
 
   # Explorer Colors
-  gitDecoration.modifiedResourceForeground: *LG_CYAN
+  gitDecoration.modifiedResourceForeground: *PURPLE
   gitDecoration.deletedResourceForeground: *LG_RED
   gitDecoration.untrackedResourceForeground: *LG_GREEN
   gitDecoration.ignoredResourceForeground: *COMMENT
@@ -348,7 +348,7 @@ colors:
 
   # Quick Picker
   pickerGroup.border: *LG_PURPLE                                                   # Quick picker (Quick Open) color for grouping borders
-  pickerGroup.foreground: *LG_CYAN                                                 # Quick picker (Quick Open) color for grouping labels
+  pickerGroup.foreground: *PURPLE                                                 # Quick picker (Quick Open) color for grouping labels
 
   # Debug
   debugToolBar.background: *BGDark                                              # Debug toolbar background color
@@ -482,7 +482,7 @@ tokenColors:
     - beginning.punctuation.definition.quote.markdown
     - punctuation.definition.link.restructuredtext
     settings:
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
   - name: Inline code (prose)
     scope:
@@ -496,7 +496,7 @@ tokenColors:
     - markup.underline.link
     - markup.underline.link.image
     settings:
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
   - name: Link text, image alt text (prose)
     scope:
@@ -565,7 +565,7 @@ tokenColors:
     - entity.name.type.class
     - entity.name.class
     settings:
-      foreground: *LG_CYAN
+      foreground: *PURPLE
       fontStyle: normal
 
   - name: this, super, self, etc.
@@ -585,7 +585,7 @@ tokenColors:
     - entity.other.inherited-class
     settings:
       fontStyle: italic
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
 # =============================================================================
 # Comments
@@ -612,14 +612,14 @@ tokenColors:
     scope:
     - comment.block.documentation entity.name.type
     settings:
-      foreground: *LG_CYAN
+      foreground: *PURPLE
       fontStyle: italic
 
   - name: JSDoc-style type brackets
     scope:
     - comment.block.documentation entity.name.type punctuation.definition.bracket
     settings:
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
   - name: JSDoc-style comment parameters
     scope:
@@ -746,7 +746,7 @@ tokenColors:
     - support
     settings:
       fontStyle: italic
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
   - name: Built-in magic functions and constants
     scope:
@@ -846,7 +846,7 @@ tokenColors:
     - entity.name.tag.yaml
     - variable.other.key.toml
     settings:
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
   - name: Dates / timestamps (serializable languages)
     scope:
@@ -899,7 +899,7 @@ tokenColors:
     - storage.type.ocaml
     settings:
       fontStyle: italic
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
   - name: Generics, templates, and mapped type declarations
     scope:
@@ -945,7 +945,7 @@ tokenColors:
     scope:
     - punctuation.definition.character-class.regexp
     settings:
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
   - name: Capture groups
     scope:
@@ -1058,7 +1058,7 @@ tokenColors:
     - entity.name.fragment.graphql
     - variable.fragment.graphql
     settings:
-      foreground: *LG_CYAN
+      foreground: *PURPLE
 
   # Edge Cases
   # ==========
