--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -14,16 +14,16 @@ dracula:
     - &LG_GREEN     '#50FA7B'
     - &LG_ORANGE    '#FFB86C'
     - &LG_PINK      '#FF79C6'
-    - &LG_PURPLE    '#BD93F9'
     - &LG_RED       '#FF5555'
     - &PURPLE       '#c77ebb'
     - &GREEN        '#6aab73'
+    - &ORANGE       '#cf8e6d'
   ansi:
     - &COLOR0        '#21222C'
     - &COLOR1        '#FF5555'
     - &COLOR2        '#6aab73'
     - &COLOR3        '#F1FA8C'
-    - &COLOR4        '#BD93F9'
+    - &COLOR4        '#cf8e6d'
     - &COLOR5        '#FF79C6'
     - &COLOR6        '#8BE9FD'
     - &COLOR7        '#F8F8F2'
@@ -77,7 +77,7 @@ colors:
   focusBorder: *COMMENT                                                         # Overall border color for focused elements. This color is only used if not overridden by a component
   foreground: *FG                                                               # Overall foreground color. This color is only used if not overridden by a component
   widget.shadow:                                                                # Shadow color of widgets such as Find/Replace inside the editor
-  selection.background: *LG_PURPLE                                                 # Background color of text selections in the workbench (for input fields or text areas, does not apply to selections within the editor and the terminal)
+  selection.background: *ORANGE                                                 # Background color of text selections in the workbench (for input fields or text areas, does not apply to selections within the editor and the terminal)
   errorForeground: *LG_RED                                                         # Overall foreground color for error messages (this color is only used if not overridden by a component)
 
   # Button Control
@@ -100,7 +100,7 @@ colors:
   input.foreground: *FG                                                         # Input box foreground
   input.border: *BGDarker                                                       # Input box border
   input.placeholderForeground: *COMMENT                                         # Input box foreground color for placeholder text
-  inputOption.activeBorder: *LG_PURPLE                                             # Border color of activated options in input fields
+  inputOption.activeBorder: *ORANGE                                             # Border color of activated options in input fields
   inputValidation.infoForeground:                                               # Input validation foreground color for information severity
   inputValidation.infoBackground:                                               # Input validation background color for information severity
   inputValidation.infoBorder: *LG_PINK                                             # Input validation border color for information severity
@@ -145,7 +145,7 @@ colors:
   activityBar.foreground: *FG                                                   # Activity bar foreground color (for example used for the icons)
   activityBar.border:                                                           # Activity Bar border color with the Side Bar
   activityBar.activeBorder: !alpha [*LG_PINK, 80]                                  # Activity Bar indicator color
-  activityBar.activeBackground: !alpha [*LG_PURPLE, 10]                            # Activity Bar indicator background color
+  activityBar.activeBackground: !alpha [*ORANGE, 10]                            # Activity Bar indicator background color
   activityBarBadge.background: *LG_PINK                                            # Activity notification badge background color
   activityBarBadge.foreground: *FG                                              # Activity notification badge foreground color
 
@@ -160,7 +160,7 @@ colors:
 
   # Editor Group & Tabs
   editorGroup.background:                                                       # Background color of an editor group. The background color shows up when dragging editor groups around
-  editorGroup.border: *LG_PURPLE                                                   # Color to separate multiple editor groups from each other
+  editorGroup.border: *ORANGE                                                   # Color to separate multiple editor groups from each other
   editorGroup.dropBackground: *TAB_DROP_BG                                      # Background color when dragging editors around
   editorGroupHeader.noTabsBackground:                                           # Background color of the editor group title header when Tabs are disabled
   editorGroupHeader.tabsBackground: *BGDarker                                   # Background color of the Tabs container
@@ -200,7 +200,7 @@ colors:
   editor.lineHighlightBorder: *SELECTION                                        # Background color for the border around the line at the cursor position
 
   editorLink.activeForeground: *PURPLE                                            # Color of active links
-  editor.rangeHighlightBackground: !alpha [ *LG_PURPLE, 15 ]                       # Background color of highlighted ranges, like by Quick Open and Find features
+  editor.rangeHighlightBackground: !alpha [ *ORANGE, 15 ]                       # Background color of highlighted ranges, like by Quick Open and Find features
 
   editor.snippetTabstopHighlightBackground: *BG                                 # Highlight background color of a snippet tabstop
   editor.snippetTabstopHighlightBorder: *COMMENT                                # Highlight border color of a snippet tabstop
@@ -224,7 +224,7 @@ colors:
   editorBracketHighlight.foreground2: *LG_PINK                                     # Color of second pair of brackets
   editorBracketHighlight.foreground3: *PURPLE                                     # Color of third pair of brackets
   editorBracketHighlight.foreground4: *LG_GREEN                                    # Color of fourth pair of brackets
-  editorBracketHighlight.foreground5: *LG_PURPLE                                   # Color of fifth pair of brackets
+  editorBracketHighlight.foreground5: *ORANGE                                   # Color of fifth pair of brackets
   editorBracketHighlight.foreground6: *LG_ORANGE                                   # Color of sixth pair of brackets
   editorBracketHighlight.unexpectedBracket.foreground: *LG_RED                     # Color of bracket matching error
 
@@ -303,15 +303,15 @@ colors:
   # Merge Conflicts
   merge.currentHeaderBackground: !alpha [ *LG_GREEN, 90 ]                          # Current header background in inline merge conflicts
   merge.currentContentBackground:                                               # Current content background in inline merge conflicts
-  merge.incomingHeaderBackground: !alpha [ *LG_PURPLE, 90 ]                        # Incoming header background in inline merge conflicts
+  merge.incomingHeaderBackground: !alpha [ *ORANGE, 90 ]                        # Incoming header background in inline merge conflicts
   merge.incomingContentBackground:                                              # Incoming content background in inline merge conflicts
   merge.border:                                                                 # Border color on headers and the splitter in inline merge conflicts
   editorOverviewRuler.currentContentForeground: *LG_GREEN                          # Current overview ruler foreground for inline merge conflicts
-  editorOverviewRuler.incomingContentForeground: *LG_PURPLE                        # Incoming overview ruler foreground for inline merge conflicts
+  editorOverviewRuler.incomingContentForeground: *ORANGE                        # Incoming overview ruler foreground for inline merge conflicts
 
   # Panel Colors
   panel.background: *BG                                                         # Panel background color
-  panel.border: *LG_PURPLE                                                         # Panel border color on the top separating to the editor
+  panel.border: *ORANGE                                                         # Panel border color on the top separating to the editor
   panelTitle.activeBorder: *LG_PINK                                                # Border color for the active panel title
   panelTitle.activeForeground: *FG                                              # Title color for the active panel
   panelTitle.inactiveForeground: *COMMENT                                       # Title color for the inactive panel
@@ -328,7 +328,7 @@ colors:
   statusBarItem.prominentBackground: *LG_RED                                       # Status Bar prominent items background color. Prominent items stand out from other Status Bar entries to indicate importance
   statusBarItem.prominentHoverBackground: *LG_ORANGE                               # Status Bar prominent items background color when hovering. Prominent items stand out from other Status Bar entries to indicate importance
   statusBarItem.remoteForeground: *BG                                           # Background color for the remote indicator on the status bar
-  statusBarItem.remoteBackground: *LG_PURPLE                                       # Foreground color for the remote indicator on the status bar
+  statusBarItem.remoteBackground: *ORANGE                                       # Foreground color for the remote indicator on the status bar
   statusBar.border:
 
   # Title Bar Colors (MacOS Only)
@@ -343,7 +343,7 @@ colors:
   extensionButton.prominentHoverBackground: !alpha [ *LG_GREEN, 60 ]               # Extension view button background hover color
 
   # Quick Picker
-  pickerGroup.border: *LG_PURPLE                                                   # Quick picker (Quick Open) color for grouping borders
+  pickerGroup.border: *ORANGE                                                   # Quick picker (Quick Open) color for grouping borders
   pickerGroup.foreground: *PURPLE                                                 # Quick picker (Quick Open) color for grouping labels
 
   # Debug
@@ -402,7 +402,7 @@ tokenColors:
   - scope:
     - header
     settings:
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
 
   # Diffs
   # ======
@@ -463,7 +463,7 @@ tokenColors:
     - markup.heading
     settings:
       fontStyle: bold
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
 
   - name: Markup italic
     scope:
@@ -529,14 +529,14 @@ tokenColors:
     scope:
     - punctuation.definition.constant.restructuredtext
     settings:
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
 
   - name: Braces in markdown headings
     scope:
     - markup.heading.markdown punctuation.definition.string.begin
     - markup.heading.markdown punctuation.definition.string.end
     settings:
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
 
   - name: Braces in markdown paragraphs
     scope:
@@ -573,7 +573,7 @@ tokenColors:
     - variable.other.readwrite.instance.ruby                # ruby's "@" instance symbol
     - variable.parameter.function.language.special          # Special words as parameters
     settings:
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
       fontStyle: italic
 
   - name: Inherited classes
@@ -633,7 +633,7 @@ tokenColors:
     - constant
     - variable.other.constant
     settings:
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
 
   - name: Constant escape sequences
     scope:
@@ -751,7 +751,7 @@ tokenColors:
     - variable.other.predefined
     settings:
       fontStyle: regular
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
 
   - name: Built-in functions / properties
     scope:
@@ -1082,14 +1082,14 @@ tokenColors:
     scope:
     - source.shell variable.other
     settings:
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
 
   - name: Powershell constants mistakenly scoped to `support`, rather than `constant` (edge)
     scope:
     - support.constant
     settings:
       fontStyle: normal
-      foreground: *LG_PURPLE
+      foreground: *ORANGE
 
   - name: Makefile prerequisite names
     scope:
