--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -693,7 +693,7 @@ tokenColors:
     - meta.selectionset.graphql meta.arguments.graphql variable.arguments.graphql
     - variable.parameter
     settings:
-      foreground: *LG_ORANGE
+      foreground: *FG
 
   - name: Decorators
     scope:
