--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -1011,6 +1011,11 @@ tokenColors:
     scope:
     - variable
     - constant.other.key.perl     # Perl edge case
+    settings:
+      foreground: *PURPLE
+
+  - name: Variables and object properties
+    scope:
     - support.variable.property   # Object properties
     - variable.other.constant.js  # Fix incorrect highlighting of pseudo-constants in js, jsx
     - variable.other.constant.ts  # Fixes incorrect highlighting of pseudo-constants in ts
