Make comments grey

--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -10,7 +10,7 @@ dracula:
     - &BG        '#282A36'
     - &FG        '#bcbec4'
     - &SELECTION '#44475A'
-    - &COMMENT   '#6272A4'
+    - &COMMENT   '#7a7e85'
     - &LG_GREEN     '#50FA7B'
     - &LG_ORANGE    '#FFB86C'
     - &LG_PINK      '#FF79C6'
@@ -29,7 +29,7 @@ dracula:
     - &COLOR5        '#FF79C6'
     - &COLOR6        '#8BE9FD'
     - &COLOR7        '#bcbec4'
-    - &COLOR8        '#6272A4'
+    - &COLOR8        '#7a7e85'
     - &COLOR9        '#FF6E6E'
     - &COLOR10       '#69FF94'
     - &COLOR11       '#FFFFA5'
