--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -224,11 +224,11 @@ colors:
   editorBracketMatch.border:                                                    # Color for matching brackets boxes
 
   editorBracketHighlight.foreground1: *FG                                       # Color of first pair of brackets
-  editorBracketHighlight.foreground2: *LG_PINK                                     # Color of second pair of brackets
-  editorBracketHighlight.foreground3: *PURPLE                                     # Color of third pair of brackets
-  editorBracketHighlight.foreground4: *LG_GREEN                                    # Color of fourth pair of brackets
-  editorBracketHighlight.foreground5: *ORANGE                                   # Color of fifth pair of brackets
-  editorBracketHighlight.foreground6: *LG_ORANGE                                   # Color of sixth pair of brackets
+  editorBracketHighlight.foreground2: *FG                                     # Color of second pair of brackets
+  editorBracketHighlight.foreground3: *FG                                     # Color of third pair of brackets
+  editorBracketHighlight.foreground4: *FG                                    # Color of fourth pair of brackets
+  editorBracketHighlight.foreground5: *FG                                   # Color of fifth pair of brackets
+  editorBracketHighlight.foreground6: *FG                                   # Color of sixth pair of brackets
   editorBracketHighlight.unexpectedBracket.foreground: *LG_RED                     # Color of bracket matching error
 
   editorOverviewRuler.border: *BGDarker                                         # Color of the overview ruler border
