reset assignment to fg

--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -812,6 +812,7 @@ tokenColors:
   - name: Brackets, braces, parens, etc.
     scope:
     - keyword.operator.other.powershell # Commas
+    - keyword.operator.assignment
     - keyword.other.statement-separator.powershell
     - meta.brace.round
     - meta.function-call punctuation
