Mark builtin const orange

--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -765,6 +765,7 @@ tokenColors:
     scope:
     - support.type.builtin
     - support.type.primitive
+    - constant.language
     settings:
       fontStyle: regular
       foreground: *ORANGE
