Get rid of pink punctuation

--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -809,7 +809,7 @@ tokenColors:
     - support.other.chomping-indicator.yaml
     - punctuation.separator.annotation
     settings:
-      foreground: *LG_PINK
+      foreground: *FG
 
   - name: Brackets, braces, parens, etc.
     scope:
