--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -23,6 +23,7 @@ dracula:
     - &WARNING      '#f2c55c'
     - &BLACK        '#000000'
     - &CYAN         '#2fbaa3'
+    - &YELLOW       '#d5b778'
   ansi:
     - &COLOR0        '#21222C'
     - &COLOR1        '#FF5555'
@@ -753,6 +754,12 @@ tokenColors:
     settings:
       foreground: *CYAN
       fontStyle: 'normal'
+
+  - name: 'Tags'
+    scope:
+    - meta.tag
+    settings:
+      foreground: *YELLOW
 
 # =============================================================================
 # Language Built-ins
