--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -676,7 +676,7 @@ tokenColors:
     scope:
     - entity.name.tag
     settings:
-      foreground: *LG_PINK
+      foreground: *YELLOW
 
   - name: CSS attribute parent selectors ('&')
     scope:
